2007-03-14  Paul Eggert  <eggert@cs.ucla.edu>

	* README (WARNING): Reword to avoid mention of no-longer-existing
	section in INSTALL file.  Problem reported by Paul Townsend in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-03/msg00000.html>.

2007-02-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gzip.c (foreground): Initialize to zero.  This doesn't fix a bug
	since C guarantees it's zero, but it's more consistent with the
	rest of the code.  Problem reported by Mark Adler.

2007-02-08  Paul Eggert  <eggert@cs.ucla.edu>

	* zdiff.in: Don't use '((' in a shell script, as it's not portable
	to some ksh implementations, e.g., Solaris 10 ksh M-11/16/88i.
	Problem reported by Nelson H. F. Beebe in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-02/msg00005.html>.

2007-02-05  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Version 1.3.11 released.
	* configure.ac (AC_INIT): Likewise.

	* doc/gzip.texi: Convert Texinfo format into a more modern style.
	Put in current output samples.

	* .cvsignore: Add *.gz, gunzip, zcat, zcmp, zegrep, zfgrep.
	* lib/.cvsignore: Add sys_time_.h, unistd_.h.
	* m4/.cvsignore: Add gnulib-common.m4, sys_time_h.m4.

	* gunzip.in, zcat.in, zcmp.in, zegrep.in, zfgrep.in: New files.
	* Makefile.am (EXTRA_DIST): Add them.
	(bin_SCRIPTS, MOSTLYCLEANFILES): Add gunzip, zcat, zcmp, zdgrep, zfgrep.
	(.in): Use GZIP_BINDIR as the location of gzip binaries, if it is set.
	(check-local): Use GZIP_BINDIR.
	(install-exec-hook, remove-installed-links): Make 'uncompress' an
	alias for gunzip.
	* gzexe.1: At least one arg is required.  Don't give cat as an
	example, since gzexe refuses to compress cat due to a bootstrapping
	issue.  List more utilities in this category.
	* gzexe.in, zdiff.in, zforce.in, zgrep.in, zless.in, zmore.in, znew.in:
	Report our name in usage.
	* gzexe.in: Don't compress bash.  Don't use rmdir, so it's
	OK to compress rmdir.
	* gzip.c: Now requires that you compile with -DGNU_STANDARD=0 to