@@ -29,6 +29,7 @@ gnulib_modules='
 	getopt
 	stat-time
 	sys_stat
+	time
 	utimens
 	xalloc
 	yesno
