@@ -1,6 +1,6 @@
 /* zip.c -- compress files to the gzip or pkzip format
 
-   Copyright (C) 1997, 1998, 1999, 2006 Free Software Foundation, Inc.
+   Copyright (C) 1997, 1998, 1999, 2006, 2007 Free Software Foundation, Inc.
    Copyright (C) 1992-1993 Jean-loup Gailly
 
    This program is free software; you can redistribute it and/or modify
@@ -27,8 +27,6 @@ static char rcsid[] = "$Id$";
 #include "tailor.h"
 #include "gzip.h"
 #include "crypt.h"
-
-#include "timespec.h"
 
 #ifdef HAVE_UNISTD_H
 #  include <unistd.h>
